# procurement-agent

./: .gitignore  .vercelignore  README.md  pyproject.toml  vercel.json
.github/workflows/: deploy-backend-azure.yml
procurement-agent/: README.md
procurement-agent/backend/: .dockerignore  .vercelignore  Dockerfile  azure-startup.txt  requirements.txt  sitecustomize.py  startup.sh  vercel.json
procurement-agent/backend/app/: config.py  database.py  decorators.py  exceptions.py  idempotency.py  main.py  models.py  schemas.py  security.py  state_machine.py
procurement-agent/backend/app/agent/: graph.py  nodes.py  prompts.py  state.py
procurement-agent/backend/app/api/: approvals.py  auth.py  logs.py  requests.py  vendors.py
procurement-agent/backend/app/services/: document_service.py  execution_queue.py  execution_safety.py  llm_service.py  storage_service.py  workflow_service.py
procurement-agent/backend/app/tools/: approval_tools.py  email_tools.py  (+4 more)
procurement-agent/backend/scripts/: check_environment.py  check_fullstack_config.py  e2e_test.py  init_db.py  seed_data.py  start_backend.py
procurement-agent/backend/sql/: schema.sql  seed.sql
procurement-agent/backend/tests/: conftest.py  test_document_extraction.py  test_graph_workflow.py  test_status_and_idempotency.py  test_validation_and_guardrails.py  test_vendor_search.py
procurement-agent/docs/: agent_pipeline.md  agent_pipeline.mmd
procurement-agent/frontend/: .vercelignore  index.html  package-lock.json  package.json
procurement-agent/frontend/src/: App.jsx
scripts/: setup_windows_uv.ps1
(+12 files in other folders)
