[project]
name = "mastring-ai-agentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "pyodbc==5.2.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.19",
    "openai==1.57.0",
    "langgraph==0.2.59",
    "tenacity==9.0.0",
    "pdfplumber==0.11.4",
    "pymupdf==1.24.14",
    "pypdf==5.1.0",
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "python-docx==1.1.2",
    "pytest==8.3.4",
]
